# zero2prod

./: Cargo.toml  LICENSE
.cargo/: config.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
zero2prod/: HelloWorld.bru  health_check.bru
